DEX-27229 | fix: UI issues on mobile and tablets

--- a/_src-lp/blocks/b-productswithinputdevices/b-productswithinputdevices.scss
+++ b/_src-lp/blocks/b-productswithinputdevices/b-productswithinputdevices.scss
@@ -420,6 +420,15 @@
     width: 128px;
     height: 96px
   }
+
+  .b-productswithinputdevices-container .b-productswithinputdevices-wrapper .b-productswithinputdevices > div > div:has(h3) {
+    max-width: 80%;
+    margin: auto;
+
+    h3 {
+      flex-direction: column;
+    }
+  }
 }
 
 @media (width <= 991px) {
