--- a/_src-lp/blocks/new-prod-boxes/new-prod-boxes.scss
+++ b/_src-lp/blocks/new-prod-boxes/new-prod-boxes.scss
@@ -1625,7 +1625,7 @@
 
 @media (width <= 767px) {
     .new-prod-boxes-container {
-        overflow: hidden;
+        overflow-y: visible;
     }
 
     .new-prod-boxes-container .block {
