--- a/_src-lp/styles/styles.css
+++ b/_src-lp/styles/styles.css
@@ -934,6 +934,7 @@ main .section.light-sky-blue > * {
   display: inline-flex;
   vertical-align: middle;
   align-items: center;
+  height: fit-content;
 }
 
 .greenTag {
